# xen

./: .bk-to-hg  .cirrus.yml  .gitarchive-info  .gitattributes  .gitignore  .gitlab-ci.yml  .hg-to-bk  .hgignore  .hgsigs  .hgtags  .readthedocs.yaml  .rootkeys  .travis.yml  CHANGELOG.md  CODING_STYLE  CONTRIBUTING  COPYING  CREDITS  Config.mk  INSTALL  MAINTAINERS  MSG  Makefile  README  README.CD  SUPPORT.md  TODO  autogen.sh  configure  configure.ac  install.sh  version.sh
docs/: .gitignore  ChangeLog  Console-HOWTO.txt  Docs.mk  Doxyfile  Doxyfilter  INDEX  Makefile  README.colo  README.remus  README.source  README.xen-bugtool  VBD-HOWTO.txt  Xen-HOWTO.txt  Xeno-1.1-HOWTO.txt  Xeno-1.2-HOWTO.txt  Xeno-HOWTO  Xeno-HOWTO.txt  check_pkgs  conf.py  configure  configure.ac  contribute-xen.rst  faq.rst  function_macro_properties.json  function_macro_properties.rst  gen-html-index  glossary.rst  index.rst  interface.tex  parse-support-md  pdb.txt  pythfilter.py  style.tex  support-matrix-generate  user.tex  xen-headers  xen_config.html  xend.tex  xenstyle.cls
docs/HOWTOs/: Console-HOWTO  Sched-HOWTO  Xen-HOWTO  XenDebugger-HOWTO
docs/admin-guide/: index.rst  introduction.rst  microcode-loading.rst
docs/contribute-xen/: submit-patch.rst
docs/designs/: argo.pandoc  dmop.markdown  dmop.pandoc  nested-svm-cpu-features.md  non-cooperative-migration.md  qemu-deprivilege.md  xenstore-migration.md
docs/eps/: xenlogo.eps
docs/faq/: faq.rst
docs/features/: dom0less.pandoc  feature-levelling.pandoc  feature-levelling.rst  hypervisorfs.pandoc  intel_psr_cat_cdp.pandoc  intel_psr_mba.pandoc  livepatch.pandoc  migration.pandoc  qemu-deprivilege.pandoc  sched_credit.pandoc  sched_credit2.pandoc  sched_rtds.pandoc  template.pandoc
docs/figs/: Makefile  acm_ezpolicy.eps  acm_ezpolicy_gui.eps  acm_overview.eps  network-basic.fig  network-bridge.fig
docs/fusa/: index.rst
docs/guest-guide/: index.rst
docs/how-to/: code-coverage.rst  how-xen-boots.rst
docs/hypervisor-guide/: code-coverage.rst  index.rst
docs/introduction/: architecture.rst  installation.rst  introduction.rst
docs/man/: xen-pci-device-reservations.7.pod  xen-pci-device-reservations.pod.7  xen-pv-channel.7.pod  xen-pv-channel.markdown.7  xen-pv-channel.pod.7  xen-tscmode.7.pod  xen-tscmode.pod.7  xen-vbd-interface.7.pandoc  xen-vtpm.7.pod  xen-vtpm.pod.7  xen-vtpmmgr.7.pod  xen-vtpmmgr.pod.7  xend-config.sxp.pod.5  xenhypfs.1.pod  xenstore-chmod.1.pod  xenstore-exists.1.pod  xenstore-list.1.pod  xenstore-ls.1.pod  xenstore-ls.pod.1  xenstore-read.1.pod  xenstore-read.pod.1  xenstore-rm.1.pod  xenstore-watch.1.pod  xenstore-write.1.pod  xenstore-write.pod.1  xenstore.1.pod  xenstore.pod.1  xentop.1.pod  xentop.pod.1  xentrace.8.pod  xentrace.pod.8  xentrace_format.1.pod  xenwatchdogd.8.pod  xl-disk-configuration.5.pod  xl-disk-configuration.5.pod.in  xl-disk-configuration.pod.5  xl-network-configuration.5.pod  xl-network-configuration.5.pod.in  xl-network-configuration.markdown.5  xl-network-configuration.pod.5  (+18 more)
docs/misc/: 9pfs.markdown  9pfs.pandoc  VMX_changes.txt  XenDebugger-HOWTO  amd-ucode-container.txt  blkif-drivers-explained.txt  block-scripts.txt  cache-coloring.rst  channel.txt  ci.rst  console.txt  coverage.markdown  cpuid-config-for-guest.txt  crashdb.txt  distro_mapping.txt  dump-core-format.txt  efi.markdown  efi.pandoc  grant-tables.txt  hg-cheatsheet.txt  hvm-emulated-unplug.markdown  hvmlite.markdown  hypfs-paths.pandoc  kexec_and_kdump.txt  libxl_memory.txt  livepatch.markdown  livepatch.pandoc  netif-staging-grants.pandoc  network_setup.txt  pci-device-reservations.txt  printk-formats.txt  pv-drivers-lifecycle.markdown  pvcalls.markdown  pvcalls.pandoc  pvh-readme.txt  pvh.markdown  pvh.pandoc  pvrdtscp.c  qemu-backends.txt  qemu-deprivilege.txt  (+37 more)
docs/misra/: C-language-toolchain.rst  C-runtime-failures.rst  cppcheck.txt  deviations.rst  documenting-violations.rst  exclude-list.json  exclude-list.rst  false-positive-coverity.json  false-positive-cppcheck.json  false-positive-eclair.json  index.rst  rules.rst  safe.json  xen-static-analysis.rst
docs/process/: RUBRIC  branching-checklist.txt  coding-best-practices.pandoc  release-technician-checklist.txt  sending-patches.pandoc  tags.pandoc  xen-release-management.pandoc
docs/reference/: hypercall-abi.rst  imagebuilder.rst  xen-arm-debug.rst
docs/running-xen-on-arm/: midway.rst  odroid.rst  qemu.rst
docs/specs/: libxc-migration-stream.pandoc  libxl-migration-stream.pandoc
docs/src/: interface.tex  user.tex  xend.tex
docs/tutorials/: booting-xen-u-boot.rst  configure-networking.rst  reduce-latency.rst
docs/xen-api/: Makefile  bibliography.tex  coversheet.tex  fdl.tex  presentation.tex  revision-history.tex  todo.tex  vm-lifecycle.tex  vm_lifecycle.dot  wire-protocol.tex  xen.eps  xenapi-coversheet.tex  xenapi-datamodel-graph.dot  xenapi-datamodel-graph.eps  xenapi-datamodel.tex  xenapi.tex
stubdom/: .gitignore  COPYING  Makefile  README  binutils.patch  configure  configure.ac  gcc.patch  ioemu-minios.cfg  libpci.config.h  libpci.config.mak  lwip.dhcp_create_request-hwaddr_len.patch  lwip.patch-cvs  mini-os.mk  newlib-chk.patch  newlib-cygmon-gmon.patch  newlib-disable-texinfo.patch  newlib-fix-copy_past_newline.patch  newlib-fix-etext.patch  newlib-makedoc.patch  newlib-stdint-size_max-fix-from-1.17.0.patch  newlib.patch  ocaml.patch  pciutils.patch  polarssl.patch  stubdom-dm  tpmemu-0.7.4.patch  vtpm-cmake-Wextra.patch  vtpm-command-duration.patch  vtpm-implicit-fallthrough.patch  vtpm-microsecond-duration.patch  vtpm-tpm_bn_t-addr.patch  vtpm_TPM_ChangeAuthAsymFinish.patch  vtpm_extern.patch  xenlibs.mk  xenstore-minios.cfg  xenstorepvh-minios.cfg
stubdom/c/: Makefile  main.c  minios.cfg
stubdom/caml/: Makefile
stubdom/grub.patches/: 00cvs  10graphics.diff  11graphics-keyboard.diff  20print_func.diff  30savedefault.diff  40ext3_256byte_inode.diff  50fs_fulldisk.diff  60ext4.diff  61btrfs.diff  70compiler_warnings.diff  99minios
tools/: Make.defs  Makefile  Rules.mk  config.h.in  configure  configure.ac  cross-install
(+11094 files in other folders)
